[gd_scene load_steps=14 format=3 uid="uid://gm32bt3r6kga"]

[ext_resource type="PackedScene" uid="uid://b4feee6p7u23t" path="res://player/Player.tscn" id="1"]
[ext_resource type="AudioStream" uid="uid://d3bfukd5ep1qb" path="res://game/res/spacedeb.mp3" id="2"]
[ext_resource type="Script" path="res://game/Game.gd" id="3"]
[ext_resource type="Script" path="res://game/DeathZone.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://c4qdkjgpo0i5h" path="res://background/BackgroundLayer.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://djvjaqnanlei6" path="res://game/PauseScreen.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://cp6exhklqnla7" path="res://game/HUD.tscn" id="8_1inqb"]
[ext_resource type="PackedScene" uid="uid://buyvavyuwmccw" path="res://joystick/virtual_joystick.tscn" id="8_i2rhs"]

[sub_resource type="CanvasItemMaterial" id="2"]

[sub_resource type="Gradient" id="3"]
colors = PackedColorArray(0.186523, 0.00655746, 0.00655746, 1, 0.0507812, 0.0507812, 0.0507812, 0)

[sub_resource type="GradientTexture2D" id="4"]
gradient = SubResource("3")

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(64, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_621lr"]

[node name="Game" type="CanvasLayer"]
script = ExtResource("3")

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(50, 0)

[node name="BackgroundLayer" parent="." instance=ExtResource("5")]

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2(700, 0)
stream = ExtResource("2")
autoplay = true

[node name="DeathZone" type="StaticBody2D" parent="."]
script = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="DeathZone"]
material = SubResource("2")
position = Vector2(32, 77)
scale = Vector2(1, 2.406)
texture = SubResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(16, 78)
scale = Vector2(0.5, 1)
shape = SubResource("1")

[node name="PauseScreen" parent="." instance=ExtResource("7")]
process_mode = 2
visible = false

[node name="HUD" parent="." instance=ExtResource("8_1inqb")]

[node name="MobileControls" type="CanvasLayer" parent="."]
process_mode = 3
follow_viewport_enabled = true

[node name="VirtualJoystick" parent="MobileControls" instance=ExtResource("8_i2rhs")]
offset_left = 128.0
offset_top = -320.0
offset_right = 328.0
offset_bottom = -120.0
joystick_mode = 1

[node name="ShootButtonLabel" type="Label" parent="MobileControls"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.74902)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -398.0
offset_top = -260.0
offset_right = -164.0
offset_bottom = -175.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Shoot"

[node name="TouchScreenButton" type="TouchScreenButton" parent="MobileControls/ShootButtonLabel"]
position = Vector2(118, 44)
scale = Vector2(15, 5)
shape = SubResource("RectangleShape2D_621lr")
action = "ui_accept"

[node name="PickupSpawnTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="health_changed" from="Player" to="." method="_on_player_health_changed"]
[connection signal="max_health_changed" from="Player" to="." method="_on_player_max_health_changed"]
[connection signal="shield_changed" from="Player" to="." method="_on_player_shield_changed"]
[connection signal="pressed" from="MobileControls/ShootButtonLabel/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="MobileControls/ShootButtonLabel/TouchScreenButton" to="." method="_on_touch_screen_button_released"]
[connection signal="timeout" from="PickupSpawnTimer" to="." method="_on_pickup_spawn_timer_timeout"]
